hrm exploration and hrm data files

--- a/batting_by_position.ipynb
+++ b/batting_by_position.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "23f3610a",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 2,
    "id": "b24085c2",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "9c79136d",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "1fd21561",
    "metadata": {},
    "outputs": [],
@@ -70,10 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 5,
    "id": "c172c718",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gathering player lookup table. This may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "# retrieve player IDs of each player in players\n",
     "player_ids = bb.player_search_list(players)\n",
@@ -96,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 6,
    "id": "c1a87535",
    "metadata": {},
    "outputs": [],
@@ -109,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "id": "71851a4c",
    "metadata": {},
    "outputs": [],
@@ -122,29 +130,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 172,
-   "id": "0e314ea3",
+   "cell_type": "raw",
+   "id": "1f259486",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0/541\n",
-      "50/541\n",
-      "100/541\n",
-      "150/541\n",
-      "200/541\n",
-      "250/541\n",
-      "300/541\n",
-      "350/541\n",
-      "400/541\n",
-      "450/541\n",
-      "500/541\n"
-     ]
-    }
-   ],
    "source": [
     "positions = []\n",
     "for i in range(len(batting)):\n",
@@ -161,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
    "id": "fe7e7679",
    "metadata": {},
    "outputs": [],
@@ -176,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "id": "16cb5273",
    "metadata": {},
    "outputs": [],
@@ -186,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "id": "e16469ad",
    "metadata": {},
    "outputs": [],
@@ -197,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "id": "4f959764",
    "metadata": {},
    "outputs": [],
@@ -207,425 +195,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 10,
    "id": "82c1a80c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = pd.read_csv('/Users/mason/w/cs/fun/baseball/data/batting_by_position_2019.csv')"
+    "bbp = pd.read_csv('/Users/mason/w/cs/fun/baseball/data/batting_by_position_2019.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 12,
    "id": "e35696ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Position</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>#days</th>\n",
-       "      <th>G</th>\n",
-       "      <th>PA</th>\n",
-       "      <th>AB</th>\n",
-       "      <th>R</th>\n",
-       "      <th>H</th>\n",
-       "      <th>2B</th>\n",
-       "      <th>3B</th>\n",
-       "      <th>...</th>\n",
-       "      <th>HBP</th>\n",
-       "      <th>SH</th>\n",
-       "      <th>SF</th>\n",
-       "      <th>GDP</th>\n",
-       "      <th>SB</th>\n",
-       "      <th>CS</th>\n",
-       "      <th>BA</th>\n",
-       "      <th>OBP</th>\n",
-       "      <th>SLG</th>\n",
-       "      <th>OPS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Catcher</td>\n",
-       "      <td>29.026316</td>\n",
-       "      <td>603.697368</td>\n",
-       "      <td>74.289474</td>\n",
-       "      <td>252.565789</td>\n",
-       "      <td>225.565789</td>\n",
-       "      <td>27.697368</td>\n",
-       "      <td>53.631579</td>\n",
-       "      <td>10.223684</td>\n",
-       "      <td>0.394737</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.052632</td>\n",
-       "      <td>0.710526</td>\n",
-       "      <td>1.618421</td>\n",
-       "      <td>5.750000</td>\n",
-       "      <td>0.723684</td>\n",
-       "      <td>0.289474</td>\n",
-       "      <td>0.227592</td>\n",
-       "      <td>0.297553</td>\n",
-       "      <td>0.386263</td>\n",
-       "      <td>0.683737</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Centerfielder</td>\n",
-       "      <td>27.428571</td>\n",
-       "      <td>616.738095</td>\n",
-       "      <td>93.666667</td>\n",
-       "      <td>326.238095</td>\n",
-       "      <td>291.095238</td>\n",
-       "      <td>43.023810</td>\n",
-       "      <td>70.238095</td>\n",
-       "      <td>14.690476</td>\n",
-       "      <td>1.690476</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.642857</td>\n",
-       "      <td>1.523810</td>\n",
-       "      <td>1.857143</td>\n",
-       "      <td>4.976190</td>\n",
-       "      <td>8.857143</td>\n",
-       "      <td>2.595238</td>\n",
-       "      <td>0.233452</td>\n",
-       "      <td>0.305119</td>\n",
-       "      <td>0.388524</td>\n",
-       "      <td>0.693571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Designated</td>\n",
-       "      <td>28.666667</td>\n",
-       "      <td>620.833333</td>\n",
-       "      <td>88.833333</td>\n",
-       "      <td>360.000000</td>\n",
-       "      <td>316.333333</td>\n",
-       "      <td>47.500000</td>\n",
-       "      <td>81.666667</td>\n",
-       "      <td>15.333333</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.166667</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.500000</td>\n",
-       "      <td>5.666667</td>\n",
-       "      <td>2.166667</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.248167</td>\n",
-       "      <td>0.333000</td>\n",
-       "      <td>0.440000</td>\n",
-       "      <td>0.773000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>First Baseman</td>\n",
-       "      <td>28.695652</td>\n",
-       "      <td>603.304348</td>\n",
-       "      <td>111.500000</td>\n",
-       "      <td>423.413043</td>\n",
-       "      <td>371.000000</td>\n",
-       "      <td>53.565217</td>\n",
-       "      <td>93.195652</td>\n",
-       "      <td>18.934783</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.760870</td>\n",
-       "      <td>0.021739</td>\n",
-       "      <td>2.891304</td>\n",
-       "      <td>8.826087</td>\n",
-       "      <td>1.695652</td>\n",
-       "      <td>0.739130</td>\n",
-       "      <td>0.242413</td>\n",
-       "      <td>0.324043</td>\n",
-       "      <td>0.444435</td>\n",
-       "      <td>0.768478</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Leftfielder</td>\n",
-       "      <td>27.518519</td>\n",
-       "      <td>603.185185</td>\n",
-       "      <td>100.037037</td>\n",
-       "      <td>374.740741</td>\n",
-       "      <td>336.888889</td>\n",
-       "      <td>47.851852</td>\n",
-       "      <td>88.370370</td>\n",
-       "      <td>19.222222</td>\n",
-       "      <td>1.925926</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.555556</td>\n",
-       "      <td>0.296296</td>\n",
-       "      <td>2.629630</td>\n",
-       "      <td>6.592593</td>\n",
-       "      <td>3.629630</td>\n",
-       "      <td>1.148148</td>\n",
-       "      <td>0.255741</td>\n",
-       "      <td>0.321407</td>\n",
-       "      <td>0.444000</td>\n",
-       "      <td>0.765481</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Outfielder</td>\n",
-       "      <td>27.111111</td>\n",
-       "      <td>610.654321</td>\n",
-       "      <td>91.419753</td>\n",
-       "      <td>323.654321</td>\n",
-       "      <td>288.629630</td>\n",
-       "      <td>44.345679</td>\n",
-       "      <td>75.518519</td>\n",
-       "      <td>15.370370</td>\n",
-       "      <td>1.938272</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.172840</td>\n",
-       "      <td>0.753086</td>\n",
-       "      <td>1.679012</td>\n",
-       "      <td>5.395062</td>\n",
-       "      <td>6.135802</td>\n",
-       "      <td>1.604938</td>\n",
-       "      <td>0.248259</td>\n",
-       "      <td>0.320926</td>\n",
-       "      <td>0.424148</td>\n",
-       "      <td>0.745037</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Pinch</td>\n",
-       "      <td>27.083333</td>\n",
-       "      <td>609.000000</td>\n",
-       "      <td>64.250000</td>\n",
-       "      <td>147.333333</td>\n",
-       "      <td>131.666667</td>\n",
-       "      <td>18.916667</td>\n",
-       "      <td>31.583333</td>\n",
-       "      <td>6.833333</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.333333</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.916667</td>\n",
-       "      <td>2.666667</td>\n",
-       "      <td>2.333333</td>\n",
-       "      <td>0.916667</td>\n",
-       "      <td>0.232500</td>\n",
-       "      <td>0.299500</td>\n",
-       "      <td>0.370083</td>\n",
-       "      <td>0.669333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Pitcher</td>\n",
-       "      <td>27.642857</td>\n",
-       "      <td>598.821429</td>\n",
-       "      <td>31.928571</td>\n",
-       "      <td>68.821429</td>\n",
-       "      <td>61.250000</td>\n",
-       "      <td>4.357143</td>\n",
-       "      <td>8.571429</td>\n",
-       "      <td>1.250000</td>\n",
-       "      <td>0.035714</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.428571</td>\n",
-       "      <td>4.392857</td>\n",
-       "      <td>0.214286</td>\n",
-       "      <td>0.714286</td>\n",
-       "      <td>0.178571</td>\n",
-       "      <td>0.035714</td>\n",
-       "      <td>0.131321</td>\n",
-       "      <td>0.163714</td>\n",
-       "      <td>0.177357</td>\n",
-       "      <td>0.341000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Rightfielder</td>\n",
-       "      <td>28.354839</td>\n",
-       "      <td>610.290323</td>\n",
-       "      <td>109.096774</td>\n",
-       "      <td>434.580645</td>\n",
-       "      <td>384.548387</td>\n",
-       "      <td>60.129032</td>\n",
-       "      <td>99.580645</td>\n",
-       "      <td>19.451613</td>\n",
-       "      <td>1.258065</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.032258</td>\n",
-       "      <td>0.322581</td>\n",
-       "      <td>3.161290</td>\n",
-       "      <td>8.225806</td>\n",
-       "      <td>5.064516</td>\n",
-       "      <td>1.129032</td>\n",
-       "      <td>0.246161</td>\n",
-       "      <td>0.320806</td>\n",
-       "      <td>0.454452</td>\n",
-       "      <td>0.775226</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Second Baseman</td>\n",
-       "      <td>27.573529</td>\n",
-       "      <td>602.764706</td>\n",
-       "      <td>91.279412</td>\n",
-       "      <td>332.617647</td>\n",
-       "      <td>300.588235</td>\n",
-       "      <td>41.397059</td>\n",
-       "      <td>79.279412</td>\n",
-       "      <td>15.838235</td>\n",
-       "      <td>1.676471</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.470588</td>\n",
-       "      <td>0.838235</td>\n",
-       "      <td>1.911765</td>\n",
-       "      <td>5.397059</td>\n",
-       "      <td>4.411765</td>\n",
-       "      <td>1.441176</td>\n",
-       "      <td>0.253059</td>\n",
-       "      <td>0.316456</td>\n",
-       "      <td>0.404912</td>\n",
-       "      <td>0.721309</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Shortstop</td>\n",
-       "      <td>26.678571</td>\n",
-       "      <td>604.857143</td>\n",
-       "      <td>107.267857</td>\n",
-       "      <td>418.375000</td>\n",
-       "      <td>381.642857</td>\n",
-       "      <td>54.321429</td>\n",
-       "      <td>102.089286</td>\n",
-       "      <td>21.250000</td>\n",
-       "      <td>2.446429</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.339286</td>\n",
-       "      <td>0.803571</td>\n",
-       "      <td>2.803571</td>\n",
-       "      <td>8.089286</td>\n",
-       "      <td>8.071429</td>\n",
-       "      <td>2.500000</td>\n",
-       "      <td>0.254446</td>\n",
-       "      <td>0.310071</td>\n",
-       "      <td>0.421268</td>\n",
-       "      <td>0.731321</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Third Baseman</td>\n",
-       "      <td>27.698113</td>\n",
-       "      <td>606.981132</td>\n",
-       "      <td>104.716981</td>\n",
-       "      <td>397.584906</td>\n",
-       "      <td>353.415094</td>\n",
-       "      <td>52.698113</td>\n",
-       "      <td>92.981132</td>\n",
-       "      <td>19.830189</td>\n",
-       "      <td>1.716981</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.283019</td>\n",
-       "      <td>0.245283</td>\n",
-       "      <td>2.660377</td>\n",
-       "      <td>8.396226</td>\n",
-       "      <td>2.924528</td>\n",
-       "      <td>0.830189</td>\n",
-       "      <td>0.250264</td>\n",
-       "      <td>0.322981</td>\n",
-       "      <td>0.438528</td>\n",
-       "      <td>0.761547</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>12 rows × 25 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "          Position        Age       #days           G          PA          AB  \\\n",
-       "0          Catcher  29.026316  603.697368   74.289474  252.565789  225.565789   \n",
-       "1    Centerfielder  27.428571  616.738095   93.666667  326.238095  291.095238   \n",
-       "2       Designated  28.666667  620.833333   88.833333  360.000000  316.333333   \n",
-       "3    First Baseman  28.695652  603.304348  111.500000  423.413043  371.000000   \n",
-       "4      Leftfielder  27.518519  603.185185  100.037037  374.740741  336.888889   \n",
-       "5       Outfielder  27.111111  610.654321   91.419753  323.654321  288.629630   \n",
-       "6            Pinch  27.083333  609.000000   64.250000  147.333333  131.666667   \n",
-       "7          Pitcher  27.642857  598.821429   31.928571   68.821429   61.250000   \n",
-       "8     Rightfielder  28.354839  610.290323  109.096774  434.580645  384.548387   \n",
-       "9   Second Baseman  27.573529  602.764706   91.279412  332.617647  300.588235   \n",
-       "10       Shortstop  26.678571  604.857143  107.267857  418.375000  381.642857   \n",
-       "11   Third Baseman  27.698113  606.981132  104.716981  397.584906  353.415094   \n",
-       "\n",
-       "            R           H         2B        3B  ...       HBP        SH  \\\n",
-       "0   27.697368   53.631579  10.223684  0.394737  ...  3.052632  0.710526   \n",
-       "1   43.023810   70.238095  14.690476  1.690476  ...  4.642857  1.523810   \n",
-       "2   47.500000   81.666667  15.333333  1.000000  ...  4.166667  0.000000   \n",
-       "3   53.565217   93.195652  18.934783  1.000000  ...  4.760870  0.021739   \n",
-       "4   47.851852   88.370370  19.222222  1.925926  ...  3.555556  0.296296   \n",
-       "5   44.345679   75.518519  15.370370  1.938272  ...  4.172840  0.753086   \n",
-       "6   18.916667   31.583333   6.833333  0.750000  ...  1.333333  0.333333   \n",
-       "7    4.357143    8.571429   1.250000  0.035714  ...  0.428571  4.392857   \n",
-       "8   60.129032   99.580645  19.451613  1.258065  ...  4.032258  0.322581   \n",
-       "9   41.397059   79.279412  15.838235  1.676471  ...  3.470588  0.838235   \n",
-       "10  54.321429  102.089286  21.250000  2.446429  ...  3.339286  0.803571   \n",
-       "11  52.698113   92.981132  19.830189  1.716981  ...  4.283019  0.245283   \n",
-       "\n",
-       "          SF       GDP        SB        CS        BA       OBP       SLG  \\\n",
-       "0   1.618421  5.750000  0.723684  0.289474  0.227592  0.297553  0.386263   \n",
-       "1   1.857143  4.976190  8.857143  2.595238  0.233452  0.305119  0.388524   \n",
-       "2   2.500000  5.666667  2.166667  0.500000  0.248167  0.333000  0.440000   \n",
-       "3   2.891304  8.826087  1.695652  0.739130  0.242413  0.324043  0.444435   \n",
-       "4   2.629630  6.592593  3.629630  1.148148  0.255741  0.321407  0.444000   \n",
-       "5   1.679012  5.395062  6.135802  1.604938  0.248259  0.320926  0.424148   \n",
-       "6   0.916667  2.666667  2.333333  0.916667  0.232500  0.299500  0.370083   \n",
-       "7   0.214286  0.714286  0.178571  0.035714  0.131321  0.163714  0.177357   \n",
-       "8   3.161290  8.225806  5.064516  1.129032  0.246161  0.320806  0.454452   \n",
-       "9   1.911765  5.397059  4.411765  1.441176  0.253059  0.316456  0.404912   \n",
-       "10  2.803571  8.089286  8.071429  2.500000  0.254446  0.310071  0.421268   \n",
-       "11  2.660377  8.396226  2.924528  0.830189  0.250264  0.322981  0.438528   \n",
-       "\n",
-       "         OPS  \n",
-       "0   0.683737  \n",
-       "1   0.693571  \n",
-       "2   0.773000  \n",
-       "3   0.768478  \n",
-       "4   0.765481  \n",
-       "5   0.745037  \n",
-       "6   0.669333  \n",
-       "7   0.341000  \n",
-       "8   0.775226  \n",
-       "9   0.721309  \n",
-       "10  0.731321  \n",
-       "11  0.761547  \n",
-       "\n",
-       "[12 rows x 25 columns]"
+       "Index(['Position', 'Age', '#days', 'G', 'PA', 'AB', 'R', 'H', '2B', '3B', 'HR',\n",
+       "       'RBI', 'BB', 'IBB', 'SO', 'HBP', 'SH', 'SF', 'GDP', 'SB', 'CS', 'BA',\n",
+       "       'OBP', 'SLG', 'OPS'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test"
+    "bbp.columns"
    ]
   },
   {
@@ -634,7 +233,9 @@
    "id": "88b34614",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pithcers.apply"
+   ]
   }
  ],
  "metadata": {
