--- a/pitching_stats_exploration.ipynb
+++ b/pitching_stats_exploration.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "02d5018d",
+   "execution_count": 1,
+   "id": "c5093e31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d2311d",
+   "id": "93dbf251",
    "metadata": {},
    "source": [
     "new stat: (Hits + Walks) * Homeruns / Innings Pitched -> HRM\n",
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "2d0787b9",
+   "execution_count": 2,
+   "id": "8c8fa770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "07f8f8d8",
+   "execution_count": 3,
+   "id": "52ffbd36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,21 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "ef133a41",
+   "execution_count": 4,
+   "id": "9fb58f02",
    "metadata": {},
    "outputs": [],
    "source": [
     "for k, p in pitchers.items():\n",
     "    p = p.sort_values(by='IP', ascending=False)[:80]\n",
-    "    p['HRM'] = p.apply(lambda row: (row.BB + row.H) * row.HR / row.IP, axis=1)\n",
+    "    p['HRM'] = p.apply(lambda row: (row.BB + row.H - row.HR) * row.HR / row.IP, axis=1)\n",
     "    pitchers[k] = p.sort_values(by='HRM')[['Name', 'IP', 'HRM']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "fa40718a",
+   "execution_count": 5,
+   "id": "f581ba0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "afd83fda",
+   "execution_count": 7,
+   "id": "63be58e9",
    "metadata": {},
    "outputs": [
     {
@@ -113,186 +113,186 @@
        "      <th>158</th>\n",
        "      <td>Nathan Eovaldi</td>\n",
        "      <td>55.1</td>\n",
-       "      <td>1.197822</td>\n",
+       "      <td>1.179673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>77</th>\n",
        "      <td>Corbin Burnes</td>\n",
        "      <td>46.1</td>\n",
-       "      <td>1.301518</td>\n",
+       "      <td>1.214751</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>627</th>\n",
        "      <td>Brandon Woodruff</td>\n",
        "      <td>64.0</td>\n",
-       "      <td>2.109375</td>\n",
+       "      <td>1.968750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62</th>\n",
        "      <td>Matthew Boyd</td>\n",
        "      <td>52.2</td>\n",
-       "      <td>2.183908</td>\n",
+       "      <td>2.107280</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>204</th>\n",
        "      <td>Kyle Gibson</td>\n",
        "      <td>60.1</td>\n",
-       "      <td>3.044925</td>\n",
+       "      <td>2.895175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>478</th>\n",
        "      <td>Trevor Rogers</td>\n",
        "      <td>56.2</td>\n",
-       "      <td>3.202847</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>347</th>\n",
-       "      <td>Carlos Martinez</td>\n",
-       "      <td>47.1</td>\n",
-       "      <td>3.375796</td>\n",
+       "      <td>3.042705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>202</th>\n",
        "      <td>Kevin Gausman</td>\n",
        "      <td>64.2</td>\n",
-       "      <td>3.426791</td>\n",
+       "      <td>3.177570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>437</th>\n",
-       "      <td>Nick Pivetta</td>\n",
-       "      <td>47.2</td>\n",
-       "      <td>3.750000</td>\n",
+       "      <th>347</th>\n",
+       "      <td>Carlos Martinez</td>\n",
+       "      <td>47.1</td>\n",
+       "      <td>3.184713</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>333</th>\n",
        "      <td>Lance Lynn</td>\n",
        "      <td>47.2</td>\n",
-       "      <td>3.898305</td>\n",
+       "      <td>3.559322</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>Dylan Cease</td>\n",
-       "      <td>45.1</td>\n",
-       "      <td>3.924612</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>431</th>\n",
-       "      <td>Martin Perez</td>\n",
-       "      <td>45.2</td>\n",
-       "      <td>3.982301</td>\n",
+       "      <th>437</th>\n",
+       "      <td>Nick Pivetta</td>\n",
+       "      <td>47.2</td>\n",
+       "      <td>3.559322</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>113</th>\n",
        "      <td>Gerrit Cole</td>\n",
        "      <td>64.2</td>\n",
-       "      <td>4.049844</td>\n",
+       "      <td>3.660436</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>582</th>\n",
-       "      <td>Jose Urena</td>\n",
-       "      <td>48.2</td>\n",
-       "      <td>4.481328</td>\n",
+       "      <th>93</th>\n",
+       "      <td>Dylan Cease</td>\n",
+       "      <td>45.1</td>\n",
+       "      <td>3.725055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431</th>\n",
+       "      <td>Martin Perez</td>\n",
+       "      <td>45.2</td>\n",
+       "      <td>3.783186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>125</th>\n",
        "      <td>Yu Darvish</td>\n",
        "      <td>61.2</td>\n",
-       "      <td>4.493464</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>608</th>\n",
-       "      <td>Zack Wheeler</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>4.705882</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>324</th>\n",
-       "      <td>Pablo Lopez</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>4.714286</td>\n",
+       "      <td>4.084967</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>426</th>\n",
        "      <td>Freddy Peralta</td>\n",
        "      <td>49.2</td>\n",
-       "      <td>4.776423</td>\n",
+       "      <td>4.268293</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Ian Anderson</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>4.784314</td>\n",
+       "      <th>582</th>\n",
+       "      <td>Jose Urena</td>\n",
+       "      <td>48.2</td>\n",
+       "      <td>4.294606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>608</th>\n",
+       "      <td>Zack Wheeler</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>4.338235</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>395</th>\n",
        "      <td>Joe Musgrove</td>\n",
        "      <td>55.2</td>\n",
-       "      <td>5.000000</td>\n",
+       "      <td>4.347826</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>175</th>\n",
-       "      <td>Jack Flaherty</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>5.350877</td>\n",
+       "      <th>324</th>\n",
+       "      <td>Pablo Lopez</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>4.428571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Ian Anderson</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>4.470588</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>292</th>\n",
        "      <td>Clayton Kershaw</td>\n",
        "      <td>64.1</td>\n",
-       "      <td>5.429017</td>\n",
+       "      <td>4.867395</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>Chris Bassitt</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>5.491803</td>\n",
+       "      <th>175</th>\n",
+       "      <td>Jack Flaherty</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>4.912281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>583</th>\n",
        "      <td>Julio Urias</td>\n",
        "      <td>62.1</td>\n",
-       "      <td>5.748792</td>\n",
+       "      <td>4.959742</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>359</th>\n",
-       "      <td>Lance McCullers Jr.</td>\n",
-       "      <td>51.2</td>\n",
-       "      <td>5.859375</td>\n",
+       "      <th>39</th>\n",
+       "      <td>Chris Bassitt</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>5.081967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Trevor Bauer</td>\n",
+       "      <td>63.2</td>\n",
+       "      <td>5.189873</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    Name    IP       HRM\n",
-       "158       Nathan Eovaldi  55.1  1.197822\n",
-       "77         Corbin Burnes  46.1  1.301518\n",
-       "627     Brandon Woodruff  64.0  2.109375\n",
-       "62          Matthew Boyd  52.2  2.183908\n",
-       "204          Kyle Gibson  60.1  3.044925\n",
-       "478        Trevor Rogers  56.2  3.202847\n",
-       "347      Carlos Martinez  47.1  3.375796\n",
-       "202        Kevin Gausman  64.2  3.426791\n",
-       "437         Nick Pivetta  47.2  3.750000\n",
-       "333           Lance Lynn  47.2  3.898305\n",
-       "93           Dylan Cease  45.1  3.924612\n",
-       "431         Martin Perez  45.2  3.982301\n",
-       "113          Gerrit Cole  64.2  4.049844\n",
-       "582           Jose Urena  48.2  4.481328\n",
-       "125           Yu Darvish  61.2  4.493464\n",
-       "608         Zack Wheeler  68.0  4.705882\n",
-       "324          Pablo Lopez  56.0  4.714286\n",
-       "426       Freddy Peralta  49.2  4.776423\n",
-       "20          Ian Anderson  51.0  4.784314\n",
-       "395         Joe Musgrove  55.2  5.000000\n",
-       "175        Jack Flaherty  57.0  5.350877\n",
-       "292      Clayton Kershaw  64.1  5.429017\n",
-       "39         Chris Bassitt  61.0  5.491803\n",
-       "583          Julio Urias  62.1  5.748792\n",
-       "359  Lance McCullers Jr.  51.2  5.859375"
+       "                 Name    IP       HRM\n",
+       "158    Nathan Eovaldi  55.1  1.179673\n",
+       "77      Corbin Burnes  46.1  1.214751\n",
+       "627  Brandon Woodruff  64.0  1.968750\n",
+       "62       Matthew Boyd  52.2  2.107280\n",
+       "204       Kyle Gibson  60.1  2.895175\n",
+       "478     Trevor Rogers  56.2  3.042705\n",
+       "202     Kevin Gausman  64.2  3.177570\n",
+       "347   Carlos Martinez  47.1  3.184713\n",
+       "333        Lance Lynn  47.2  3.559322\n",
+       "437      Nick Pivetta  47.2  3.559322\n",
+       "113       Gerrit Cole  64.2  3.660436\n",
+       "93        Dylan Cease  45.1  3.725055\n",
+       "431      Martin Perez  45.2  3.783186\n",
+       "125        Yu Darvish  61.2  4.084967\n",
+       "426    Freddy Peralta  49.2  4.268293\n",
+       "582        Jose Urena  48.2  4.294606\n",
+       "608      Zack Wheeler  68.0  4.338235\n",
+       "395      Joe Musgrove  55.2  4.347826\n",
+       "324       Pablo Lopez  56.0  4.428571\n",
+       "20       Ian Anderson  51.0  4.470588\n",
+       "292   Clayton Kershaw  64.1  4.867395\n",
+       "175     Jack Flaherty  57.0  4.912281\n",
+       "583       Julio Urias  62.1  4.959742\n",
+       "39      Chris Bassitt  61.0  5.081967\n",
+       "40       Trevor Bauer  63.2  5.189873"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c4974ce",
+   "id": "2426046d",
    "metadata": {},
    "outputs": [],
    "source": []
