refactor markov pitching

--- a/markov_pitching.ipynb
+++ b/markov_pitching.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "2fffd31c",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 3,
    "id": "d9ff1c41",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 4,
    "id": "9ed56704",
    "metadata": {},
    "outputs": [],
@@ -75,12 +75,20 @@
     "def simulate(state, pi, i):\n",
     "    for _ in range(i):\n",
     "        state = np.dot(state, pi)\n",
-    "    return state"
+    "    return state\n",
+    "\n",
+    "class Player:\n",
+    "    \n",
+    "    def __init__(self, first, last):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.data = get_data(self.first, self.last)\n",
+    "        self.pi = limiting_distribution(self.data['on_base_count'], num_simulations = 100000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 5,
    "id": "45dcc642",
    "metadata": {},
    "outputs": [
@@ -88,6 +96,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Gathering player lookup table. This may take a moment.\n",
+      "Gathering Player Data\n",
       "Gathering Player Data\n",
       "Gathering Player Data\n",
       "Gathering Player Data\n",
@@ -96,19 +106,16 @@
     }
    ],
    "source": [
-    "woodruff = get_data('brandon', 'woodruff')\n",
-    "woodruff_count = woodruff['on_base_count']\n",
-    "bauer = get_data('trevor', 'bauer')\n",
-    "bauer_count = bauer['on_base_count']\n",
-    "scherzer = get_data('max', 'scherzer')\n",
-    "scherzer_count = scherzer['on_base_count']\n",
-    "lyles = get_data('jordan', 'lyles')\n",
-    "lyles_count = lyles['on_base_count']"
+    "woodruff = Player('brandon', 'woodruff')\n",
+    "bauer = Player('trevor', 'bauer')\n",
+    "scherzer = Player('max', 'scherzer')\n",
+    "lyles = Player('jordan', 'lyles')\n",
+    "gant = Player('john', 'gant')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 6,
    "id": "de84806c",
    "metadata": {
     "scrolled": true
@@ -116,16 +123,17 @@
    "outputs": [],
    "source": [
     "pitchers = [\n",
-    "limiting_distribution(woodruff_count, num_simulations = 100000),\n",
-    "limiting_distribution(bauer_count, num_simulations = 100000),\n",
-    "limiting_distribution(scherzer_count, num_simulations = 10000),\n",
-    "limiting_distribution(lyles_count, num_simulations = 10000),\n",
+    "    woodruff,\n",
+    "    bauer,\n",
+    "    scherzer, \n",
+    "    lyles, \n",
+    "    gant\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 7,
    "id": "361830e5",
    "metadata": {},
    "outputs": [
@@ -135,16 +143,17 @@
        "[array([0.70719844, 0.2266537 , 0.06614786, 0.        ]),\n",
        " array([0.71132376, 0.20334928, 0.07097289, 0.01435407]),\n",
        " array([0.6917363 , 0.24419684, 0.0371402 , 0.02692665]),\n",
-       " array([0.54326396, 0.30996714, 0.13253012, 0.01423877])]"
+       " array([0.54326396, 0.30996714, 0.13253012, 0.01423877]),\n",
+       " array([0.51341015, 0.29952556, 0.13826491, 0.04879938])]"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pitchers"
+    "[pitcher.pi for pitcher in pitchers]"
    ]
   },
   {
