created hrv table

--- a/markov_pitching.ipynb
+++ b/markov_pitching.ipynb
@@ -21,7 +21,8 @@
    "outputs": [],
    "source": [
     "start_dt = '2021-04-01'\n",
-    "end_dt = '2021-10-3'"
+    "end_dt = '2021-10-3'\n",
+    "pitchers_2021 = bb.pitching_stats_bref(2021).sort_values(by='IP', ascending=False)"
    ]
   },
   {
@@ -42,9 +43,11 @@
     "    return data\n",
     "\n",
     "def get_data(first: str, last: str) -> pd.DataFrame:\n",
-    "    l = bb.playerid_lookup(last, first)\n",
-    "    \n",
-    "    return generate(l['key_mlbam'][0])"
+    "    try:\n",
+    "        l = bb.playerid_lookup(last, first)\n",
+    "        return generate(l['key_mlbam'][0])\n",
+    "    except KeyError:\n",
+    "        return None"
    ]
   },
   {
@@ -64,13 +67,16 @@
     "    return out\n",
     "\n",
     "def limiting_distribution(count: pd.Series, num_simulations: int = 100000) -> np.array:\n",
-    "    transitions = count_transitions(count)   \n",
-    "    transitions_sum = transitions.sum(axis=1)\n",
-    "    transitions_sum = np.array([value if value else 1.0 for value in transitions_sum])\n",
-    "    probs = transitions / transitions_sum[:, np.newaxis]\n",
-    "    initial_state = [1, 0, 0, 0]\n",
+    "    if count is not None:\n",
+    "        transitions = count_transitions(count['on_base_count'])   \n",
+    "        transitions_sum = transitions.sum(axis=1)\n",
+    "        transitions_sum = np.array([value if value else 1.0 for value in transitions_sum])\n",
+    "        probs = transitions / transitions_sum[:, np.newaxis]\n",
+    "        initial_state = [1, 0, 0, 0]\n",
     "    \n",
-    "    return simulate(initial_state, probs, num_simulations)\n",
+    "        return simulate(initial_state, probs, num_simulations)\n",
+    "    else:\n",
+    "        return None\n",
     "\n",
     "def simulate(state, pi, i):\n",
     "    for _ in range(i):\n",
@@ -83,7 +89,7 @@
     "        self.first = first\n",
     "        self.last = last\n",
     "        self.data = get_data(self.first, self.last)\n",
-    "        self.pi = limiting_distribution(self.data['on_base_count'], num_simulations = 100000)"
+    "        self.pi = limiting_distribution(self.data, num_simulations = 100000)"
    ]
   },
   {
@@ -101,6 +107,7 @@
       "Gathering Player Data\n",
       "Gathering Player Data\n",
       "Gathering Player Data\n",
+      "Gathering Player Data\n",
       "Gathering Player Data\n"
      ]
     }
@@ -110,59 +117,136 @@
     "bauer = Player('trevor', 'bauer')\n",
     "scherzer = Player('max', 'scherzer')\n",
     "lyles = Player('jordan', 'lyles')\n",
-    "gant = Player('john', 'gant')"
+    "gant = Player('john', 'gant')\n",
+    "test = Player('kyle', 'hendricks')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "de84806c",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "id": "8e9dac2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n",
+      "Gathering Player Data\n"
+     ]
+    }
+   ],
    "source": [
-    "pitchers = [\n",
-    "    woodruff,\n",
-    "    bauer,\n",
-    "    scherzer, \n",
-    "    lyles, \n",
-    "    gant\n",
-    "]"
+    "names = [ tuple(name.split()) for name in pitchers_2021['Name'][:50] ]\n",
+    "pitchers = [ Player(first, last) for first, last in names ]\n",
+    "pitchers = np.array([ pitcher for pitcher in pitchers if pitcher.pi is not None ])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "361830e5",
+   "id": "4fad2f53",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[array([0.70719844, 0.2266537 , 0.06614786, 0.        ]),\n",
-       " array([0.71132376, 0.20334928, 0.07097289, 0.01435407]),\n",
-       " array([0.6917363 , 0.24419684, 0.0371402 , 0.02692665]),\n",
-       " array([0.54326396, 0.30996714, 0.13253012, 0.01423877]),\n",
-       " array([0.51341015, 0.29952556, 0.13826491, 0.04879938])]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'homers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-a66ece50eef9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpitcher\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mpitcher\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpitchers\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhomers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'homers' is not defined"
+     ]
     }
    ],
    "source": [
-    "[pitcher.pi for pitcher in pitchers]"
+    "pis = np.array([pitcher.pi for pitcher in pitchers])\n",
+    "scores = np.dot(homers, pis.T).flatten()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e9dac2c",
+   "id": "de489499",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hrv = {pitcher.first + ' ' + pitcher.last: value for pitcher, value in zip(list(pitchers), scores)}\n",
+    "HRV = pd.DataFrame(hrv.items(), columns = ['Name', 'HRM'])\n",
+    "players = pitchers_2021[:50]\n",
+    "players = players[players['Name'] != 'Kyle Hendricks']\n",
+    "HRV['HR'] = list(players['HR'])\n",
+    "HRV['IP'] = list(players['IP'])\n",
+    "HRV['HRM*HR'] = HRV.apply(lambda row: row.HRM * row.HR, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28247eb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HRV.sort_values(by='HRM')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "556958b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HRV.to_csv(f'/Users/mason/w/cs/fun/baseball/data/pitching/HRV_2021.csv')"
+   ]
   }
  ],
  "metadata": {
